--- a/default-logins/aem/adobe-aem-default-credentials.yaml
+++ b/default-logins/aem/adobe-aem-default-credentials.yaml
@@ -50,7 +50,7 @@ requests:
         - password
 
     attack: pitchfork  # Available options: sniper, pitchfork and clusterbomb
-
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: status
