--- a/technologies/graphql/graphql-apollo-detect.yaml
+++ b/technologies/graphql/graphql-apollo-detect.yaml
@@ -1,6 +1,6 @@
 id: graphql-apollo-detect
 info:
-  name: Graphql Apollo Dtect
+  name: Graphql Apollo Detect
   author: princechaddha
   severity: info
   reference: https://github.com/dolevf/graphw00f/blob/main/graphw00f/lib.py
@@ -16,8 +16,19 @@ requests:
       Content-Type: application/json
     redirects: true
 
+  - method: POST
+    path:
+      - "{{BaseURL}}/"
+    body: 'query @deprecated {__typename}'
+
+    headers:
+      Content-Type: application/json
+    redirects: true
+
     matchers:
       - type: word
         words:
           - 'Directive "@skip" argument "if" of type "Boolean!" is required, but it was not provided.'
+          - 'Directive "@deprecated" may not be used on QUERY.'
         part: body
+        condition: or
