--- a/misconfiguration/http-missing-security-headers.yaml
+++ b/misconfiguration/http-missing-security-headers.yaml
@@ -2,10 +2,10 @@ id: http-missing-security-headers
 
 info:
   name: HTTP Missing Security Headers
-  author: socketz
+  author: socketz,geeknik,G4L1T0,convisoappsec,kurohost,dawid-czarnecki
   severity: info
   description: It searches missing security headers, but obviously, could be so less generic and could be useless for Bug Bounty.
-  tags: config,headers,misconfiguration,generic
+  tags: misconfig,generic
 
 requests:
   - method: GET
