--- a/technologies/kubernetes-enterprise-manager.yaml
+++ b/technologies/kubernetes-enterprise-manager.yaml
@@ -1,21 +1,25 @@
 id: kubernetes-enterprise-manager
+
 info:
   name: Detect Kubernetes Enterprise Manager
   author: pussycat0x
   severity: info
-  tags: tech
-  reference: app="Kubernetes-Enterprise-Manager" -fofa query
+  tags: tech,kubernetes
+  additional-fields:
+    fofa-dork: 'app="Kubernetes-Enterprise-Manager"'
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<title>Kubernetes Enterprise Manager</title>"
-        condition: and
+          - "Kubernetes Enterprise Manager"
+
       - type: status
         status:
           - 200
