--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -19,38 +19,24 @@ requests:
         Accept-Language: en,es-ES;q=0.9,es;q=0.8
         Connection: close
 
-        {"userName":"admin","password":"cs141-snmp"}
+        {"userName":"{{username}}","password":"{{password}}"}
 
-      - |
-        POST /api/login HTTP/1.1
-        Host: {{Hostname}}
-        Content-Length: 44
-        Accept: application/json, text/plain, */*
-        Content-Type: application/json
-        Accept-Encoding: gzip, deflate
-        Accept-Language: en,es-ES;q=0.9,es;q=0.8
-        Connection: close
-
-        {"userName":"engineer","password":"engineer"}
-
-      - |
-        POST /api/login HTTP/1.1
-        Host: {{Hostname}}
-        Content-Length: 44
-        Accept: application/json, text/plain, */*
-        Content-Type: application/json
-        Accept-Encoding: gzip, deflate
-        Accept-Language: en,es-ES;q=0.9,es;q=0.8
-        Connection: close
-
-        {"userName":"guest","password":"guest"}
-
+    payloads:
+      username:
+        - "admin"
+        - "engineer"
+        - "guest"
+      password:
+        - "cs141-snmp"
+        - "engineer"
+        - "guest"
+    attack: pitchfork
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - 'accessToken'
-          - 'application/json'
+          - "accessToken"
+          - "application/json"
         condition: and
         part: header
 
