--- a/technologies/confluence-detect.yaml
+++ b/technologies/confluence-detect.yaml
@@ -1,11 +1,11 @@
-id: confluence-detector
+id: confluence-detect
 
 info:
-  name: confluence detector
-  author: philippedelteil            
+  name: Confluence Detect
+  author: philippedelteil
   severity: info
   description: Allows you to detect Atlassian Confluence instances
-  tags: confluence
+  tags: tech,confluence
 
 requests:
   - method: GET
@@ -17,8 +17,7 @@ requests:
 
     redirects: true
     stop-at-first-match: true
-    matchers-condition: or
-
+    matchers-condition: and
     matchers:
       - type: word
         words:
@@ -31,6 +30,7 @@ requests:
         words:
           - 'confluence-base-url'
         part: body
+
     extractors:
       - type: regex
         part: body
