--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -10,6 +10,7 @@ info:
     - https://medium.com/@Asm0d3us/weaponizing-favicon-ico-for-bugbounties-osint-and-what-not-ace3c214e139
     - https://github.com/devanshbatham/FavFreak
     - https://github.com/sansatart/scrapts/blob/master/shodan-favicon-hashes.csv
+  tags: tech,favicon
 
 requests:
   - method: GET
